--- a/crm/index.html
+++ b/crm/index.html
@@ -293,6 +293,8 @@
     .toast.show{display:block}
     .help-fab{position:fixed;bottom:80px;right:24px;width:56px;height:56px;border-radius:50%;background:var(--joe-accent);color:var(--joe-black);border:none;font-size:24px;cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,.2);z-index:1000;display:flex;align-items:center;justify-content:center;transition:transform .2s}
     .help-fab:hover{transform:scale(1.1)}
+    .merge-field::before{content:'{{';}
+    .merge-field::after{content:'}}';}
     .toast.success{background:var(--joe-green)}
     .toast.error{background:var(--joe-red)}
     .auth-error{background:rgba(239,68,68,.1);border:1px solid var(--joe-red);padding:12px;border-radius:8px;margin-top:16px;color:var(--joe-red);display:none}
@@ -542,7 +544,7 @@
       <!-- Email Templates -->
       <section class="page" id="page-emails">
         <div class="page-header"><h1>✉️ Email Templates</h1><button class="btn btn-primary" onclick="openEmailTemplateModal()">+ New Template</button></div>
-        <p style="color:var(--joe-gray);margin-bottom:20px">Create reusable email templates with merge fields. Use <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px">&#123;&#123;first_name&#125;&#125;</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px">&#123;&#123;company&#125;&#125;</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px">&#123;&#123;signature&#125;&#125;</code></p>
+        <p style="color:var(--joe-gray);margin-bottom:20px">Create reusable email templates with merge fields. Use <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">first_name</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">company</code>, <code style="background:#f3f4f6;padding:2px 6px;border-radius:4px" class="merge-field">signature</code></p>
         
         <!-- Signature Settings -->
         <div class="card" style="margin-bottom:24px">
