Link deal to shop

--- a/crm/test.html
+++ b/crm/test.html
@@ -266,8 +266,9 @@
                         .insert([{
                             name: formData.companyName + ' Deal',
                             stage: 'New Lead',
+                            shop_id: shop.id,
                             assigned_to: DEFAULT_ASSIGNEE,
-                            notes: 'Inbound: ' + formData.shopType + ', ' + formData.monthlyRevenue + '\nShop ID: ' + shop.id + '\nContact ID: ' + contact.id
+                            notes: 'Inbound: ' + formData.shopType + ', ' + formData.monthlyRevenue
                         }])
                         .select()
                         .single();
