Fix thank-you redirect

--- a/crm/test.html
+++ b/crm/test.html
@@ -296,7 +296,7 @@
 
                     // Success - redirect to thank you page
                     var guid = Math.random().toString(36).substring(2) + Date.now().toString(36);
-                    window.location.href = '/crm/thank-you/?submissionGuid=' + guid;
+                    window.location.href = '/thank-you/?submissionGuid=' + guid;
 
                 } catch (error) {
                     console.error('Error:', error);
