--- a/crm/index.html
+++ b/crm/index.html
@@ -443,7 +443,7 @@
 
       <!-- Deals -->
       <section class="page" id="page-deals">
-        <div class="page-header"><h1>💰 Deals</h1><div style="display:flex;gap:8px"><select class="filter-select" id="deals-owner-filter" onchange="renderDeals()"><option value="">All</option><option value="mine">Mine</option></select><button class="btn btn-primary" onclick="openDealModal()">+ Add Deal</button></div></div>
+        <div class="page-header"><h1>💰 Deals</h1><div style="display:flex;gap:12px;align-items:center"><label style="font-size:13px;color:var(--joe-gray)">Show:</label><select class="filter-select" id="deals-owner-filter" onchange="renderDeals()" style="min-width:120px"><option value="">All Deals</option><option value="mine">My Deals</option></select><button class="btn btn-primary" onclick="openDealModal()">+ Add Deal</button></div></div>
         <p style="color:var(--joe-gray);margin-bottom:16px;font-size:13px">Drag cards to move stages</p>
         <div class="pipeline-container" id="deals-pipeline"></div>
       </section>
