--- a/crm/index.html
+++ b/crm/index.html
@@ -1114,6 +1114,7 @@ I noticed {{company}} and thought...
           <div class="form-group full"><label>Email</label><input type="email" id="member-email" placeholder="name@joe.coffee"></div>
           <div class="form-group"><label>Name</label><input type="text" id="member-name" placeholder="Full name"></div>
           <div class="form-group"><label>Role</label><select id="member-role"><option value="sales">Sales Rep</option><option value="manager">Sales Manager</option><option value="admin">Admin</option></select></div>
+          <div class="form-group"><label>Territory</label><select id="member-territory"><option value="">None</option><option value="east">East Coast</option><option value="midwest">Midwest/Central</option><option value="west">West Coast</option></select></div>
         </div>
         <p style="margin-top:16px;font-size:12px;color:var(--joe-gray)">Team members must have a @joe.coffee email to sign in.</p>
       </div>
@@ -3824,6 +3825,7 @@ ${transcript.substring(0,10000)}`;
       document.getElementById('member-email').value='';
       document.getElementById('member-name').value='';
       document.getElementById('member-role').value='sales';
+      document.getElementById('member-territory').value='';
       document.getElementById('member-email').disabled=false;
       document.getElementById('team-modal').classList.add('open');
     }
@@ -3836,6 +3838,7 @@ ${transcript.substring(0,10000)}`;
       document.getElementById('member-email').disabled=true;
       document.getElementById('member-name').value=member.name||'';
       document.getElementById('member-role').value=member.role||'sales';
+      document.getElementById('member-territory').value=member.territory||'';
       document.getElementById('team-modal').classList.add('open');
     }
     function closeTeamMemberModal(){document.getElementById('team-modal').classList.remove('open');}
@@ -3843,18 +3846,25 @@ ${transcript.substring(0,10000)}`;
       const email=document.getElementById('member-email').value.trim();
       const name=document.getElementById('member-name').value.trim();
       const role=document.getElementById('member-role').value;
+      const territory=document.getElementById('member-territory')?.value||null;
       if(!email){showToast('Email is required','error');return;}
       if(!email.endsWith('@joe.coffee')){showToast('Must be a @joe.coffee email','error');return;}
       if(currentMemberId){
-        await db.from('team_members').update({name,role}).eq('id',currentMemberId);
+        await db.from('team_members').update({name,role,territory}).eq('id',currentMemberId);
         const member=teamMembers.find(m=>m.id===currentMemberId);
-        if(member){member.name=name;member.role=role;}
+        if(member){member.name=name;member.role=role;member.territory=territory;}
+        closeTeamMemberModal();populateDropdowns();renderTeam();showToast('Team member updated!');
       }else{
         if(teamMembers.find(m=>m.email===email)){showToast('Member already exists','error');return;}
-        const{data:newMember}=await db.from('team_members').insert([{email,name:name||email.split('@')[0],role}]).select().single();
-        if(newMember)teamMembers.push(newMember);
+        try{
+          const res=await fetch('/.netlify/functions/invite-team-member',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({email,name:name||email.split('@')[0],role,territory,invited_by:currentUser?.name})});
+          const data=await res.json();
+          if(!res.ok){showToast(data.error||'Failed to invite','error');return;}
+          teamMembers.push(data.member);
+          closeTeamMemberModal();populateDropdowns();renderTeam();
+          showToast(data.emailSent?'Invite sent! 📧':'Member added (email failed)');
+        }catch(err){console.error(err);showToast('Failed to add member','error');}
       }
-      closeTeamMemberModal();populateDropdowns();renderTeam();showToast('Team member saved!');
     }
     async function removeTeamMember(id){
       if(!confirm('Remove this team member?'))return;
